--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MONGOBD_URL = mongodb+srv://lmxnam592002:7712ieDaLakOp0UD@learningmongodb.u7f3w3c.mongodb.net/human-resource-management
 PORT = 3001
+SECRET_KEY = 05092002
